Update windows-pipeline.yaml for Azure Pipelines

--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -30,8 +30,7 @@ steps:
         --source $snapshotId \
         --location $location \
         --sku $diskSku \
-        --size-gb $diskSizeGB \
-        --storage-account-type StandardSSD_LRS
+        --size-gb $diskSizeGB
 
       # Create Windows VM using managed disk
       az vm create \
