--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -12,20 +12,28 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       # Set variables
+      subscriptionId='43ab43f3-706d-4979-82e0-86025f9ece10'
       resourceGroupName='pipeline-win'
-      vmName='new'
-      diskId='/subscriptions/43ab43f3-706d-4979-82e0-86025f9ece10/resourceGroups/pipeline-win/providers/Microsoft.Compute/disks/new'
-      osType='Windows'
+      snapshotName='newwinsnapshotload'
+      diskName='new'
+      diskSize='127'
+      storageType='StandardSSD_LRS'
+      zone='1'
       location='eastus'
-      virtualNetworkName='winpipe-vnet'
-      subnetName='default'
 
-      # Create VM from managed disk
-      az vm create \
+      # Set the active subscription
+      az account set --subscription $subscriptionId
+
+      # Get the snapshot ID
+      snapshotId=$(az snapshot show --name $snapshotName --resource-group $resourceGroupName --query id --output tsv)
+
+      # Create the managed disk from the snapshot
+      az disk create \
         --resource-group $resourceGroupName \
-        --name $vmName \
-        --attach-os-disk $diskId \
-        --os-type $osType \
-        --location $location \
-        --vnet-name $virtualNetworkName \
-        --subnet $subnetName
+        --name $diskName \
+        --sku $storageType \
+        --size-gb $diskSize \
+        --source $snapshotId \
+        --zone $zone \
+        --hyper-v-generation V2 \
+        --location $location
