--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -13,13 +13,13 @@ steps:
     inlineScript: |
       # Set variables
       resourceGroupName='pipeline-win'
-      diskName='new'
+      diskName='new1'
       snapshotId='/subscriptions/43ab43f3-706d-4979-82e0-86025f9ece10/resourceGroups/pipeline-win/providers/Microsoft.Compute/snapshots/newwinsnapshotload'
       location='eastus'
       diskSku='StandardSSD_LRS'
       diskSizeGB=127
       availabilityZone='1'
-      vmName='new'
+      vmName='new1'
       virtualNetworkName='winpipe-vnet'
       subnetName='default'
       vmSize='Standard_B4ms'
@@ -47,3 +47,32 @@ steps:
         --size $vmSize \
         --zone $availabilityZone \
         --license-type Windows_Client
+
+
+- task: AzurePowerShell@5
+  inputs:
+    azureSubscription: 'winloadsnapshot'
+    ScriptType: 'InlineScript'
+    Inline: |
+      # Set variables
+      $resourceGroupName = 'pipeline-win'
+      $vmName = 'new1'
+      $username = 'syncfusion'
+      $password = 'Syncfusion@123'
+      $applicationPath = 'C:\Program Files (x86)\Bold BI Enterprise Edition\Utilities\DeployIIS\DeployIISConsole.exe'
+      $pauseTimeInSeconds = 600  # Adjust the pause time as needed (in seconds)
+
+      # Create a remote session to the VM
+      $securePassword = ConvertTo-SecureString -String $password -AsPlainText -Force
+      $credential = New-Object -TypeName System.Management.Automation.PSCredential -ArgumentList $username, $securePassword
+      $session = New-PSSession -ComputerName $vmName -Credential $credential
+
+      # Pause for the specified time
+      Start-Sleep -Seconds $pauseTimeInSeconds
+
+      # Start the application
+      Invoke-Command -Session $session -ScriptBlock {
+        Start-Process -FilePath $using:applicationPath
+      }
+      
+      FailOnStderr: true
