--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -2,7 +2,7 @@ trigger:
   - main
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'ubuntu-latest'
 
 steps:
 - task: AzureCLI@2
@@ -13,13 +13,13 @@ steps:
     inlineScript: |
       # Set variables
       resourceGroupName='pipeline-win'
-      diskName='new1'
+      diskName='new'
       snapshotId='/subscriptions/43ab43f3-706d-4979-82e0-86025f9ece10/resourceGroups/pipeline-win/providers/Microsoft.Compute/snapshots/newwinsnapshotload'
       location='eastus'
       diskSku='StandardSSD_LRS'
       diskSizeGB=127
       availabilityZone='1'
-      vmName='new1'
+      vmName='new'
       virtualNetworkName='winpipe-vnet'
       subnetName='default'
       vmSize='Standard_B4ms'
@@ -39,7 +39,7 @@ steps:
       az vm create \
         --resource-group $resourceGroupName \
         --name $vmName \
-        --attach-os-disk "/subscriptions/43ab43f3-706d-4979-82e0-86025f9ece10/resourceGroups/pipeline-win/providers/Microsoft.Compute/disks/$diskName" \
+        --attach-os-disk $diskName \
         --os-type windows \
         --location $location \
         --vnet-name $virtualNetworkName \
@@ -54,16 +54,17 @@ steps:
     script: |
       # Set variables
       $resourceGroupName = 'pipeline-win'
-      $vmName = 'new1'
-      $username = 'syncfusion'
-      $password = 'Syncfusion@123'
+      $vmName = 'new'
+      $username = '<vm-admin-username>'
+      $password = '<vm-admin-password>'
       $applicationPath = 'C:\Program Files (x86)\Bold BI Enterprise Edition\Utilities\DeployIIS\DeployIISConsole.exe'
 
       # Construct the WinRM command to start the application
       $winrmCommand = "Invoke-Command -ComputerName $vmName -ScriptBlock {Start-Process -FilePath '$applicationPath' -WindowStyle Hidden}"
 
       # Enable WinRM on the VM
-      Enable-PSRemoting -Force
+      Set-Item WSMan:\localhost\Service\AllowUnencrypted -Value True
 
       # Execute the WinRM command to start the application
       Invoke-Command -ComputerName $vmName -ScriptBlock $winrmCommand -Credential (New-Object System.Management.Automation.PSCredential($username, (ConvertTo-SecureString -String $password -AsPlainText -Force)))
+
