--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -13,13 +13,13 @@ steps:
     inlineScript: |
       # Set variables
       resourceGroupName='pipeline-win'
-      diskName='new'
+      diskName='new1'
       snapshotId='/subscriptions/43ab43f3-706d-4979-82e0-86025f9ece10/resourceGroups/pipeline-win/providers/Microsoft.Compute/snapshots/newwinsnapshotload'
       location='eastus'
       diskSku='StandardSSD_LRS'
       diskSizeGB=127
       availabilityZone='1'
-      vmName='new'
+      vmName='new1'
       virtualNetworkName='winpipe-vnet'
       subnetName='default'
       vmSize='Standard_B4ms'
@@ -39,7 +39,7 @@ steps:
       az vm create \
         --resource-group $resourceGroupName \
         --name $vmName \
-        --attach-os-disk $diskName \
+        --attach-os-disk "/subscriptions/43ab43f3-706d-4979-82e0-86025f9ece10/resourceGroups/pipeline-win/providers/Microsoft.Compute/disks/$diskName" \
         --os-type windows \
         --location $location \
         --vnet-name $virtualNetworkName \
@@ -54,9 +54,9 @@ steps:
     script: |
       # Set variables
       $resourceGroupName = 'pipeline-win'
-      $vmName = 'new'
-      $username = '<vm-admin-username>'
-      $password = '<vm-admin-password>'
+      $vmName = 'new1'
+      $username = 'syncfusion'
+      $password = 'Syncfusion@123'
       $applicationPath = 'C:\Program Files (x86)\Bold BI Enterprise Edition\Utilities\DeployIIS\DeployIISConsole.exe'
 
       # Construct the WinRM command to start the application
