--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -59,6 +59,4 @@ steps:
         --resource-group $resourceGroupName \
         --name $vmName \
         --command-id RunPowerShellScript \
-        --scripts '
-          Start-Sleep -Seconds 300
-          Start-Process -FilePath "C:\Program Files (x86)\Bold BI Enterprise Edition\Utilities\DeployIIS\DeployIISConsole.exe"'
+        --scripts 'Start-Sleep -Seconds 600; Start-Process -FilePath "C:\Program Files (x86)\Bold BI Enterprise Edition\Utilities\DeployIIS\DeployIISConsole.exe"'
