--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -60,19 +60,8 @@ steps:
         --name new1 \
         --command-id RunPowerShellScript \
         --scripts '
-          Start-Sleep -Seconds 300
-          Start-Process -FilePath "C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe" -ArgumentList "http://localhost"
-          Start-Sleep -Seconds 20
-          $driverPath = "C:\WebDriver\msedgedriver.exe"
-          $env:PATH += ";$driverPath"
-          Add-Type -Path "C:\WebDriver\WebDriver.dll"
-          $driver = [OpenQA.Selenium.Edge.EdgeDriver]::new($driverPath)
-          $driver.Url = "http://localhost"
-          Start-Sleep -Seconds 15
-          $usernameInput = $driver.FindElementById("username")
-          $passwordInput = $driver.FindElementById("password")
-          $loginButton = $driver.FindElementById("login-button")
-          $usernameInput.SendKeys("Admin")
-          $passwordInput.SendKeys("Admin@123")
-          $loginButton.Click()
-        '
+          Start-Sleep -Seconds 500
+          cd C:\\Users\\syncfusion\\Downloads\\apache-jmeter-5.5\\apache-jmeter-5.5\\bin
+          Start-Sleep -Seconds 10
+          .\\jmeter -n -t loadtest.jmx -l result.csv -e -o result'
+      
