--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -56,14 +56,13 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       az vm run-command invoke \
-        --resource-group pipeline-win \
-        --name new1 \
+        --resource-group $resourceGroupName \
+        --name $vmName \
         --command-id RunPowerShellScript \
         --scripts '
-          Start-Sleep -Seconds 500
+          Start-Sleep -Seconds 200
           cd C:\\Users\\syncfusion\\Downloads\\apache-jmeter-5.5\\apache-jmeter-5.5\\bin
           Start-Sleep -Seconds 10
-          .\\jmeter -n -t loadtest.jmx -l result.csv -e -o result
-          Start-Sleep -Seconds 900
+          .\\jmeter -n -t loadtest123.jmx -l result.csv -e -o result
+          Start-Sleep -Seconds 600
           .\\jmeter -n -t loadtest.jmx -l result1.csv -e -o resultfor50users'
-      
