--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -56,8 +56,8 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       az vm run-command invoke \
-        --resource-group $resourceGroupName \
-        --name $vmName \
+        --resource-group pipeline-win \
+        --name new1 \
         --command-id RunPowerShellScript \
         --scripts '
           Start-Sleep -Seconds 200
