--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -60,9 +60,15 @@ steps:
         --name new1 \
         --command-id RunPowerShellScript \
         --scripts '
-          Start-Sleep -Seconds 200
+          Start-Sleep -Seconds 300
           cd C:\\Users\\syncfusion\\Downloads\\apache-jmeter-5.5\\apache-jmeter-5.5\\bin
           Start-Sleep -Seconds 10
           .\\jmeter -n -t loadtest123.jmx -l result.csv -e -o result
           Start-Sleep -Seconds 600
-          .\\jmeter -n -t loadtest.jmx -l result1.csv -e -o resultfor50users'
+          .\\jmeter -n -t loadtest.jmx -l result1.csv -e -o resultfor50users
+          Start-Sleep -Seconds 600
+          .\\jmeter -n -t loadtest.jmx -l result1.csv -e -o resultfor50users1
+          Start-Sleep -Seconds 600
+          .\\jmeter -n -t loadtest.jmx -l result1.csv -e -o resultfor50users2
+          Start-Sleep -Seconds 600
+          .\\jmeter -n -t loadtest.jmx -l result1.csv -e -o resultfor50users3'
