--- a/docker-test.yaml
+++ b/docker-test.yaml
@@ -1,1 +1,14 @@
-docker
+
+trigger:
+- none
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+steps:
+- task: DownloadGitHubRelease@0
+  inputs:
+    connection: 'kingsley-dockerimage'
+    userRepository: 'KingsleyAnbinnesan/loatestpipeline'
+    defaultVersionType: 'latest'
+    downloadPath: '$(System.ArtifactsDirectory)'
