Update docker-test.yaml for Azure Pipelines

--- a/docker-test.yaml
+++ b/docker-test.yaml
@@ -10,5 +10,5 @@ steps:
   inputs:
     connection: 'kingsley-dockerimage'
     userRepository: 'KingsleyAnbinnesan/loatestpipeline'
-    defaultVersionType: 'latest'
+    version: 'v1.0.0'
     downloadPath: '$(System.ArtifactsDirectory)'
