Update docker-test.yaml for Azure Pipelines

--- a/docker-test.yaml
+++ b/docker-test.yaml
@@ -10,4 +10,6 @@ steps:
   inputs:
     connection: 'kingsley-dockerimage'
     userRepository: 'KingsleyAnbinnesan/loatestpipeline'
+    defaultVersionType: 'specificVersion'
+    version: '7.0.0'
     downloadPath: '$(System.ArtifactsDirectory)'
