--- a/docker-test.yaml
+++ b/docker-test.yaml
@@ -6,6 +6,7 @@ jobs:
   displayName: Image creation
   pool:
     vmImage: 'ubuntu-latest'
+
   steps:
   - task: PowerShell@2
     inputs:
@@ -29,6 +30,9 @@ jobs:
   displayName: site update
   pool:
     vmImage: 'Ubuntu-latest'
+    environment:
+      name: hotfix-loadtest-linux
+      resourceType: VirtualMachine
   steps: 
   - task: Bash@3
     displayName: 'Deploy to VM'
