--- a/docker-test.yaml
+++ b/docker-test.yaml
@@ -31,7 +31,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest'
       environment:
-        name: 'dockeimage-kings-test'
+        name: 'kings-dockerimage'
         resourceType: 'VirtualMachine'
     steps:
       - task: Bash@3
